--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 server.port=8080
 server.forward-headers-strategy=FRAMEWORK
+logging.level.org.springframework.web=info
+logging.level.com.hetacz=info
