--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 #server.port=8080
-#server.forward-headers-strategy=FRAMEWORK
+server.forward-headers-strategy=FRAMEWORK
 logging.level.org.springframework.web=info
 logging.level.com.hetacz=info
